--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,5 @@ jobs:
       uses: actions/upload-artifact@v2.3.1
       with:
         name: block-sort
-        path: error
+        path: warn
     
